.metadata/.plugins/org.eclipse.cdt.ui/SieuAm.build.log
11:03:27 **** Incremental Build of configuration Debug for project SieuAm ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
../Core/Src/stm32f4xx_it.c: In function 'UART_SendString':
../Core/Src/stm32f4xx_it.c:55:5: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
   55 |     HAL_UART_Transmit(&huart1, (uint8_t*)str, strlen(str), HAL_MAX_DELAY);
      |     ^~~~~~~~~~~~~~~~~
../Core/Src/stm32f4xx_it.c:55:24: error: 'huart1' undeclared (first use in this function)
   55 |     HAL_UART_Transmit(&huart1, (uint8_t*)str, strlen(str), HAL_MAX_DELAY);
      |                        ^~~~~~
../Core/Src/stm32f4xx_it.c:55:24: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/stm32f4xx_it.c:55:47: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   55 |     HAL_UART_Transmit(&huart1, (uint8_t*)str, strlen(str), HAL_MAX_DELAY);
      |                                               ^~~~~~
../Core/Src/stm32f4xx_it.c:23:1: note: include '<string.h>' or provide a declaration of 'strlen'
   22 | #include "stm32f4xx_it.h"
  +++ |+#include <string.h>
   23 | /* Private includes ----------------------------------------------------------*/
../Core/Src/stm32f4xx_it.c:55:47: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
   55 |     HAL_UART_Transmit(&huart1, (uint8_t*)str, strlen(str), HAL_MAX_DELAY);
      |                                               ^~~~~~
../Core/Src/stm32f4xx_it.c:55:47: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/stm32f4xx_it.c: At top level:
../Core/Src/stm32f4xx_it.c:61:8: error: unknown type name 'UART_HandleTypeDef'
   61 | extern UART_HandleTypeDef huart1;
      |        ^~~~~~~~~~~~~~~~~~
../Core/Src/stm32f4xx_it.c: In function 'EXTI15_10_IRQHandler':
../Core/Src/stm32f4xx_it.c:230:5: error: 'tim6_count' undeclared (first use in this function)
  230 |     tim6_count = 0;
      |     ^~~~~~~~~~
../Core/Src/main.c:47:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'TIM_HandleTypeDef'?
   47 | UART_HandleTypeDef huart1;
      | ^~~~~~~~~~~~~~~~~~
      | TIM_HandleTypeDef
../Core/Src/stm32f4xx_it.c:237:39: error: 'SOUND_SPEED' undeclared (first use in this function)
  237 |     float distance = (echo_duration * SOUND_SPEED) / (2.0 * TIMER_FREQ);
      |                                       ^~~~~~~~~~~
../Core/Src/stm32f4xx_it.c:237:61: error: 'TIMER_FREQ' undeclared (first use in this function)
  237 |     float distance = (echo_duration * SOUND_SPEED) / (2.0 * TIMER_FREQ);
      |                                                             ^~~~~~~~~~
../Core/Src/stm32f4xx_it.c:240:5: warning: implicit declaration of function 'snprintf' [-Wimplicit-function-declaration]
  240 |     snprintf(uart_buffer, UART_BUFFER_SIZE,
      |     ^~~~~~~~
../Core/Src/stm32f4xx_it.c:23:1: note: include '<stdio.h>' or provide a declaration of 'snprintf'
   22 | #include "stm32f4xx_it.h"
  +++ |+#include <stdio.h>
   23 | /* Private includes ----------------------------------------------------------*/
../Core/Src/stm32f4xx_it.c:240:5: warning: incompatible implicit declaration of built-in function 'snprintf' [-Wbuiltin-declaration-mismatch]
  240 |     snprintf(uart_buffer, UART_BUFFER_SIZE,
      |     ^~~~~~~~
../Core/Src/stm32f4xx_it.c:240:5: note: include '<stdio.h>' or provide a declaration of 'snprintf'
../Core/Src/main.c: In function 'UART_SendString':
../Core/Src/main.c:60:9: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
   60 |         HAL_UART_Transmit(&huart1, (const uint8_t *)str, strlen(str), 2);
      |         ^~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_USART1_UART_Init':
../Core/Src/main.c:270:9: error: request for member 'Instance' in something not a structure or union
  270 |   huart1.Instance = USART1;
      |         ^
../Core/Src/main.c:271:9: error: request for member 'Init' in something not a structure or union
  271 |   huart1.Init.BaudRate = 115200;
      |         ^
../Core/Src/main.c:272:9: error: request for member 'Init' in something not a structure or union
  272 |   huart1.Init.WordLength = UART_WORDLENGTH_8B;
      |         ^
../Core/Src/stm32f4xx_it.c:240:14: error: 'uart_buffer' undeclared (first use in this function)
  240 |     snprintf(uart_buffer, UART_BUFFER_SIZE,
      |              ^~~~~~~~~~~
../Core/Src/main.c:272:28: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
  272 |   huart1.Init.WordLength = UART_WORDLENGTH_8B;
      |                            ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:272:28: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:273:9: error: request for member 'Init' in something not a structure or union
  273 |   huart1.Init.StopBits = UART_STOPBITS_1;
      |         ^
../Core/Src/stm32f4xx_it.c:240:27: error: 'UART_BUFFER_SIZE' undeclared (first use in this function); did you mean 'IS_DMA_BUFFER_SIZE'?
  240 |     snprintf(uart_buffer, UART_BUFFER_SIZE,
      |                           ^~~~~~~~~~~~~~~~
      |                           IS_DMA_BUFFER_SIZE
../Core/Src/stm32f4xx_it.c: In function 'TIM6_DAC_IRQHandler':
../Core/Src/stm32f4xx_it.c:258:3: error: 'tim6_count' undeclared (first use in this function)
  258 |   tim6_count++;
      |   ^~~~~~~~~~
../Core/Src/main.c:273:26: error: 'UART_STOPBITS_1' undeclared (first use in this function)
  273 |   huart1.Init.StopBits = UART_STOPBITS_1;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:274:9: error: request for member 'Init' in something not a structure or union
  274 |   huart1.Init.Parity = UART_PARITY_NONE;
      |         ^
make: *** [Core/Src/subdir.mk:34: Core/Src/stm32f4xx_it.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c:274:24: error: 'UART_PARITY_NONE' undeclared (first use in this function)
  274 |   huart1.Init.Parity = UART_PARITY_NONE;
      |                        ^~~~~~~~~~~~~~~~
../Core/Src/main.c:275:9: error: request for member 'Init' in something not a structure or union
  275 |   huart1.Init.Mode = UART_MODE_TX_RX;
      |         ^
../Core/Src/main.c:275:22: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
  275 |   huart1.Init.Mode = UART_MODE_TX_RX;
      |                      ^~~~~~~~~~~~~~~
../Core/Src/main.c:276:9: error: request for member 'Init' in something not a structure or union
  276 |   huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |         ^
../Core/Src/main.c:276:27: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
  276 |   huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |                           ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:277:9: error: request for member 'Init' in something not a structure or union
  277 |   huart1.Init.OverSampling = UART_OVERSAMPLING_16;
      |         ^
../Core/Src/main.c:277:30: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
  277 |   huart1.Init.OverSampling = UART_OVERSAMPLING_16;
      |                              ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:278:7: warning: implicit declaration of function 'HAL_UART_Init'; did you mean 'HAL_DMA_Init'? [-Wimplicit-function-declaration]
  278 |   if (HAL_UART_Init(&huart1) != HAL_OK)
      |       ^~~~~~~~~~~~~
      |       HAL_DMA_Init
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

11:03:27 Build Failed. 26 errors, 7 warnings. (took 703ms)

